# netbox-tenant-context

./: CHANGELOG.md  COMPATIBILITY.md  README.md  pyproject.toml
netbox_tenant_context/: __init__.py  context.py  middleware.py  template_content.py  urls.py  views.py
netbox_tenant_context/templates/netbox_tenant_context/: navbar_selector.html
